k8s/platform/elastic-stack/manifests/04-logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      serviceAccountName: logstash-msk
      containers:
        - name: logstash
          image: 858507113889.dkr.ecr.ap-northeast-2.amazonaws.com/aims-logstash:8.17.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1500Mi
